# aintent

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/llm/: analyzer.rs  config.rs  mod.rs
src/manifest/: component.rs  mod.rs  parser.rs
src/permissions/: mod.rs  protection_levels.rs
src/utils/: adb.rs  mod.rs  source.rs
